<resources>
    <string name="app_name">Blood Alcohol Calculator</string>
    <string name="my_weight_is">My weight is</string>
    <string name="kg">Kg.</string>
    <string name="next">Next</string>
    <string name="my_gender_is">My gender is…</string>
    <string name="previous">Previous</string>
    <string name="add_drink">Drink</string>
    <string name="estimated_blood_alcohol_content">Estimated Blood Alcohol Content</string>
    <string name="estimated_time_until_fully_sober">Estimated Time Until Fully Sober</string>
    <string name="legal_limit_0_03">Legal Limit (India): 0.03%</string>
    <string name="add">Add</string>
    <string name="beer">Beer</string>
    <string name="vodka">Vodka</string>
    <string name="whisky">Whisky</string>
    <string name="rum">Rum</string>
    <string name="wine">Wine</string>
    <string name="gin">Gin</string>
    <string name="brandy">Brandy</string>
    <string name="started_at_time">Select start time:</string>
    <string name="select_quantity">Select quantity:</string>
    <string name="history_underlined"><u>History</u></string>
    <string name="history">History</string>
    <string name="please_select_a_drink">Please select a drink</string>
    <string name="do_not_drive">DO NOT DRIVE</string>
    <string name="all">All</string>
    <string name="name_of_the_drink">Name of the drink</string>
    <string name="no_drinks_to_show">No drinks to show</string>
    <string name="delete_button">Delete button</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="share">Share</string>
    <string name="settings">Change Settings</string>
    <string name="about">About</string>
    <string name="started_minutes_ago">Started minutes ago?</string>
    <string name="about_text">A simple app for calculating approximate blood alcohol content according to weight, gender and drinks consumed.</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="email_id_of_developer">workingshelar@gmail.com</string>
    <string name="clear_all">Clear All</string>
    <string name="feedback_email_subject">Feedback for Blood Alcohol Calculator app</string>
    <string name="custom">Custom</string>
    <string name="drink_name">Drink Name</string>
    <string name="volume">Volume e.g. 350 ml</string>
</resources>