<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddDrinkBottomSheetDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/beer_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/beer"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/whisky_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/whisky"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/vodka_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/vodka"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/rum_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/rum"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/wine_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/wine"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/gin_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/gin"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/brandy_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/brandy"/>

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/select_start_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="?selectableItemBackground"
            app:layout_constraintBottom_toTopOf="@+id/add_drink_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/started_at_time"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/start_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                tools:text="11:00 PM"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/add_drink_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>