<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddDrinkAndDrinkHistoryBottomSheetDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_drink_bottom_sheet_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/drinks_history_empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_drinks_to_show"
            android:textColor="@color/design_default_color_primary"
            android:textStyle="italic"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear_all_added_drinks_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_drink_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/button_background"
            android:text="@string/add"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clear_all_added_drinks_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/button_background"
            android:text="@string/clear_all"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_drink_button" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/select_qty_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_drink_button">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/select_quantity"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/decrement_qty_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_remove_circle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/qty_text"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="1"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/increment_qty_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_add_circle" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/select_start_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_qty_layout">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/started_minutes_ago"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/decrement_start_time_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_remove_circle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/start_time_text"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="0"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/increment_start_time_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_add_circle" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_the_drink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_start_time_layout" />

        <ImageView
            android:id="@+id/add_custom_drink_button"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_add"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="@+id/search_drink"
            app:layout_constraintStart_toEndOf="@+id/search_drink"
            app:layout_constraintTop_toTopOf="@+id/search_drink" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_custom_drink_button"
            app:layout_constraintTop_toBottomOf="@+id/select_start_time_layout">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/all_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="true"
                    android:text="@string/all" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/whisky_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/whisky" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/beer_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/beer" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/vodka_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/vodka" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/rum_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/rum" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/wine_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/wine" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/gin_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/gin" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/brandy_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/brandy" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/custom_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/custom" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <ProgressBar
            android:id="@+id/drinks_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/drinks_recycler_view_scroll_view"
            app:layout_constraintVertical_bias=".1" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/drinks_recycler_view_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_drink">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/drinks_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="true"
                    tools:listitem="@layout/drink_list_item_layout" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>